# Backtester

./: .gitignore  Backtester.cpp  CMakeLists.txt  CsvZstReader.cpp  DataLoader.cpp  EventQueue.cpp  Fat.cpp  LICENSE  OrderBook.cpp  README.md  Style.md  main.cpp  readme.md
backtester/core/: types.h
benchmarks/: CsvZst_Ingestion_Harness.cpp  OrderBook_Perf_Harness.cpp
benchmarks/orderbook_perf_harness/: perf.data  perf.data.old
benchmarks/orderbook_perf_harness_4_19_26/: perf.data  perf.data.old
benchmarks/orderbook_perf_harness_4_24/: perf.data.old
benchmarks/orderbook_perf_harness_4_24_26/: perf.data
benchmarks/orderbook_perf_harness_4_24_26_2/: perf.data  perf.data.old
benchmarks/orderbook_perf_harness_5_4_26/: perf.data
benchmarks/orderbook_perf_harness_baseline/: perf.data
benchmarks/reader_perf_data_4_14_26/: perf.data
benchmarks/reader_perf_data_baseline/: perf.data
config/: README.md  config_1.json  config_1.yaml  demo.json
core/: Backtester.cpp  Backtester.h  ConfigParser.cpp  ConfigParser.h  Constants.h  Event.h  EventQueue.cpp  EventQueue.h  Types.h
data_ingestion/: CsvReader.cpp  CsvReader.h  CsvZstReader.cpp  CsvZstReader.h  DataLoader.cpp  DataReaderManager.cpp  DataReaderManager.h
docs/: BENCHMARKS.md
docs/sample_movAvg_report/: README.md  equity_curve_demo.csv  summary_demo.csv  trade_log.csv
execution/: ExecutionHandler.cpp  ExecutionHandler.h
include/core/: Backtester.h  ConfigParser.h  Constants.h  DefaultConfig.h  Event.h  EventQueue.h  Types.h
include/data_ingestion/: CsvZstReader.h  DataReaderManager.h  IDataReader.h
include/execution/: ExecutionHandler.h
include/market_state/: IMarketDataProvider.h  InstrumentState.h  MarketStateManager.h  OBTypes.h  OrderBook.h
include/portfolio/: PortfolioManager.h
include/reporting/: ReportGenerator.h
include/strategy/: IStrategy.h  StrategyManager.h  StrategyRegistry.h
include/utils/: NumericUtils.h  StringUtils.h  TimeUtils.h
market_state/: InstrumentState.cpp  InstrumentState.h  MarketStateManager.cpp  MarketStateManager.h  OBTypes.h  OrderBook.cpp  OrderBook.h
portfolio/: PortfolioManager.cpp  PortfolioManager.h
reporting/: ReportGenerator.cpp  ReportGenerator.h
scripts/: Scripts.py  build_bench.sh  create_clean_sample.py  create_equity_curve_graph.py  fetch_demo_data.sh  generate_flame.sh  oracle_barrier_test.py  profile.sh  profile_reader copy.sh  profile_reader.sh  requirements.txt  run_benchmarks.sh
src/: main.cpp
src/core/: Backtester.cpp  ConfigParser.cpp  EventQueue.cpp
src/data_ingestion/: CsvReader.cpp  CsvZstReader.cpp  DataLoader.cpp  DataReaderManager.cpp
src/execution/: ExecutionHandler.cpp
src/market_state/: InstrumentState.cpp  MarketStateManager.cpp  OrderBook.cpp
src/portfolio/: PortfolioManager.cpp
src/reporting/: ReportGenerator.cpp
src/strategy/: StrategyManager.cpp  StrategyTemplate.cpp
src/strategy/user_strategies/: MovAvgCross.cpp  StrategyTemplate.cpp
src/utils/: NumericUtils.cpp  StringUtils.cpp  TimeUtils.cpp
strategy/: StrategyManager.cpp  StrategyManager.h
test/core/: ConfigParser_test.cpp  EventQueue_test.cpp
test/data_ingestion/: CsvZstReader_test.cpp
test/execution/: ExecutionHandler_test.cpp
test/market_state/: OrderBook_test.cpp
test/portfolio/: PortfolioManager_test.cpp
test/test_data/: csvdata.zst  empty_lines.zst  futures_mbo.csv  futures_mbo.csv.zst  long.zst  multiline.zst  notrailingNL  simple.zst  symbology.csv
test/utils/: TimeUtils_test.cpp
utils/: TimeUtils.cpp  TimeUtils.h
